--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-jst": "^0.6.0"
+  },
+  "dependencies": {
+    "grunt": "^0.4.5"
   }
 }
