--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "start": "rollup -cf iife -w"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
+    "@babel/core": "^7.0.0-beta.46",
+    "@babel/preset-env": "^7.0.0-beta.46",
     "babel-plugin-transform-react-jsx": "^6.24.1",
-    "babel-preset-es2015-rollup": "^3.0.0",
+    "babel-polyfill": "^6.26.0",
     "cssnano": "^3.10.0",
     "postcss": "^6.0.22",
     "postcss-browser-reporter": "^0.5.0",
@@ -22,7 +23,7 @@
     "postcss-reporter": "^5.0.0",
     "postcss-url": "^7.3.2",
     "rollup": "^0.49.3",
-    "rollup-plugin-babel": "^3.0.4",
+    "rollup-plugin-babel": "4.0.0-beta.3",
     "rollup-plugin-buble": "^0.19.2",
     "rollup-plugin-commonjs": "^8.2.0",
     "rollup-plugin-livereload": "^0.6.0",
