--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "postcss-reporter": "^5.0.0",
     "postcss-url": "^7.3.2",
     "rollup": "^0.49.3",
-    "rollup-plugin-babel": "4.0.0-beta.3",
+    "rollup-plugin-babel": "beta",
     "rollup-plugin-buble": "^0.19.2",
     "rollup-plugin-commonjs": "^8.2.0",
     "rollup-plugin-livereload": "^0.6.0",
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-postcss": "^0.5.4",
+    "rollup-plugin-regenerator": "^0.6.0",
     "rollup-plugin-serve": "^0.4.2",
     "rollup-plugin-uglify": "^2.0.1"
   },
