--- a/package.json
+++ b/package.json
@@ -14,12 +14,17 @@
     "devDependencies": {
         "@rollup/plugin-commonjs": "^11.0.0",
         "@rollup/plugin-node-resolve": "^7.0.0",
+        "eslint": "^6.8.0",
         "gh-pages": "^2.2.0",
+        "prettier": "^1.19.1",
+        "prettier-standard": "^16.1.0",
         "rollup": "^1.20.0",
         "rollup-plugin-css-only": "^2.0.0",
         "rollup-plugin-livereload": "^1.0.0",
         "rollup-plugin-svelte": "^5.0.3",
         "rollup-plugin-terser": "^5.1.2",
+        "stylelint": "^13.2.0",
+        "stylelint-config-standard": "^20.0.0",
         "svelte": "^3.0.0"
     },
     "dependencies": {
