--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "build": "rollup -c",
         "dev": "rollup -c -w",
         "start": "sirv public --single",
-        "deploy": "./node_modules/.bin/gh-pages -d dist --branch master"
+        "deploy": "./node_modules/.bin/gh-pages -d public --branch master"
     },
     "devDependencies": {
         "@rollup/plugin-commonjs": "^11.0.0",
