--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,7 @@
 {
-  "trailingComma": "es5",
+  "tabWidth": 2,
   "semi": false,
   "singleQuote": true,
-  "tabWidth": 2
+  "trailingComma": "es5",
+  "plugins": ["prettier-plugin-svelte"]
 }
