--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "build": "rollup -c",
         "dev": "rollup -c -w",
         "start": "sirv public --single",
-        "deploy": "./node_modules/.bin/gh-pages -d public --branch master",
+        "deploy": "npm run build && ./node_modules/.bin/gh-pages -d public --branch master",
         "format": "prettier --write --plugin-search-dir=. src/**/**.svelte"
     },
     "devDependencies": {
